--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="seccion reveal">
       <h1 class="nombres">David & Mónica </h1>
       <h2 class="titulo "> ¡Nos casamos!</h2>
-      <p class="fecha">12:00 hrs - 17 / 12 / 23 </p>
+      <p class="fecha">12:00 hrs - 27 / 06 / 26 </p>
       <p>Iglesia San Nicolás de Bari, Burgos</p>
     </section>
 
@@ -56,7 +56,7 @@
    
 
     <section class="seccion reveal">
-      <h2>🎉 Fiestas en Burgos 🎉</h2>
+      <h2>🎉 Fiestas en Burgos </h2>
       <p>La ciudad estará en fiestas, así que podéis aprovechar para alargar la celebración</p>
       <p>Si te apetece seguir bailando, hay conciertos en  la Plaza Santa María (Plaza de la catedral) y en la Plaza Santa Teresa (al lado del Museo de la Evolución).</p>
 
@@ -83,7 +83,7 @@
 
     
 <section class="seccion reveal">
-  <h2>⏳ FALTAN</h2>
+  <h2>⏳ Faltan</h2>
   <div class="countdown-circle">
     <div class="circle"><span id="days">00</span><small>Días</small></div>
     <div class="circle"><span id="hours">00</span><small>Horas</small></div>
