--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     </section>
 
     <section class="seccion reveal">
-      <h2><i class="fas fa-church"> </i> Informacion de la ceremonia</h2>
+      <h2><i class="fas fa-church"> </i> Ceremonia</h2>
       <p>El lugar de la ceremonia será la <strong>Iglesia San Nicolás de Bari</strong> en Burgos a las 12:00 h.</p>
       <iframe src="https://www.google.com/maps?q=Iglesia+San+Nicol%C3%A1s+de+Bari,+Burgos&output=embed" allowfullscreen loading="lazy"></iframe>
     </section>
 
     <section class="seccion reveal">
-      <h2><i class="fas fa-champagne-glasses"> </i> Información del banquete</h2>
+      <h2><i class="fas fa-champagne-glasses"> </i> Banquete</h2>
       <p>El lugar del banquete será el <strong>Hotel Abba</strong> en Burgos.</p>
       <p>Tiene plazas de parking y un 10% de descuento para huéspedes.</p>
       <div>
