--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<meta name="format-detection" content="telephone=no">
-<title>Boda de David y Mónica</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="format-detection" content="telephone=no">
+  <title>Boda de David y Mónica</title>
 
-<!-- Cargar fuentes personalizadas -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Lato:wght@300;400;700&family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+  <!-- Cargar fuentes personalizadas -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Lato:wght@300;400;700&family=Montserrat:wght@300;400;700&display=swap"
+    rel="stylesheet">
 
-<!-- Íconos Font Awesome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <!-- Íconos Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-<!-- Tu hoja de estilos -->
-<link rel="stylesheet" href="style.css" />
+  <!-- Tu hoja de estilos -->
+  <link rel="stylesheet" href="style.css" />
 
 </head>
+
 <body>
+
   <div id="pantalla-inicial" class="pantalla">
+    <div class="cta-text">Haz clic para abrir tu invitación ✉️</div>
     <img id="sobre" class="sobre" src="images/sobre.jpeg" alt="Sobre de invitación" />
   </div>
 
@@ -33,7 +39,8 @@
     <section class="seccion reveal">
       <h2><i class="fas fa-church"> </i> Ceremonia</h2>
       <p>El lugar de la ceremonia será la <strong>Iglesia San Nicolás de Bari</strong> en Burgos a las 12:00 h.</p>
-      <iframe src="https://www.google.com/maps?q=Iglesia+San+Nicol%C3%A1s+de+Bari,+Burgos&output=embed" allowfullscreen loading="lazy"></iframe>
+      <iframe src="https://www.google.com/maps?q=Iglesia+San+Nicol%C3%A1s+de+Bari,+Burgos&output=embed" allowfullscreen
+        loading="lazy"></iframe>
     </section>
 
     <section class="seccion reveal">
@@ -41,64 +48,73 @@
       <p>El lugar del banquete será el <strong>Hotel Abba</strong> en Burgos.</p>
       <p>Tiene plazas de parking y un 10% de descuento para huéspedes.</p>
       <div>
-       <a href="https://www.google.com/maps?q=Calle+Fern%C3%A1n+Gonz%C3%A1lez,+72,+09003+Burgos" target="_blank" class="boton">
+        <a href="https://www.google.com/maps?q=Calle+Fern%C3%A1n+Gonz%C3%A1lez,+72,+09003+Burgos" target="_blank"
+          class="boton">
           Ver ubicación
         </a>
-        <a href="https://www.abbahoteles.com/es/destinos/abba-burgos-hotel/hotel.html" target="_blank" class="boton">Página del hotel</a>
+        <a href="https://www.abbahoteles.com/es/destinos/abba-burgos-hotel/hotel.html" target="_blank"
+          class="boton">Página del hotel</a>
       </div>
     </section>
     <section class="seccion reveal">
       <h2>📋 Formulario de confirmación</h2>
       <p>Por favor, completa el siguiente formulario para ayudarnos a organizar este día tan especial:</p>
-      <a class="boton" href="https://docs.google.com/forms/u/0/d/1TEZxsz0ZrALX4ZRESQOHn513-eJsIIFBOOM8Uo638jg/edit" target="_blank">Confirmar asistencia</a>
+      <a class="boton" href="https://docs.google.com/forms/u/0/d/1TEZxsz0ZrALX4ZRESQOHn513-eJsIIFBOOM8Uo638jg/edit"
+        target="_blank">Confirmar asistencia</a>
     </section>
 
-   
+
 
     <section class="seccion reveal">
-      <h2>🎉 Fiestas en Burgos </h2>
+      <h2>🎉 Fiestas en Burgos</h2>
       <p>La ciudad estará en fiestas, así que podéis aprovechar para alargar la celebración</p>
-      <p>Si te apetece seguir bailando, hay conciertos en  la Plaza Santa María (Plaza de la catedral) y en la Plaza Santa Teresa (al lado del Museo de la Evolución).</p>
+      <p>Si te apetece seguir bailando, hay conciertos en la Plaza Santa María (Plaza de la catedral) y en la Plaza
+        Santa Teresa (al lado del Museo de la Evolución).</p>
 
-<p>Si te has quedado con hambre, date una vuelta por la calle de los Herreros y pídete un “cojonudo” o una “cojonuda”.</p>
+      <p>Si te has quedado con hambre, date una vuelta por la calle de los Herreros y pídete un “cojonudo” o una
+        “cojonuda”.</p>
     </section>
-<section class="seccion reveal">
+    <section class="seccion reveal">
       <h2>☎️ Contacto</h2>
-      <p>Si necesitas contactarnos para hacernos alguna aclaración, pregunta, sugerencia... Aquí nos puedes localizar </p>
-          <div class="rsvp-buttons">
-  <a href="https://wa.me/34687254780?text=Hola,%20tengo%20la%20siguiente%20duda:" target="_blank" class="rsvp-button">
-   <i class="fab fa-whatsapp"></i> DAVID
-  </a>
-  <a href="https://wa.me/34658697068?text=Hola,%20tengo%20la%20siguiente%20duda:" target="_blank" class="rsvp-button">
-    <i class="fab fa-whatsapp"></i> MÓNICA
-  </a>
-</div>
+      <p>🌿 Este día lo estamos preparando con mucho cariño.</p>
+      <p>¿Quieres compartirnos algo? Pulsa el botón y cuéntanos. </p>
+
+
+      <div class="rsvp-buttons">
+        <a href="https://wa.me/34687254780?text=Hola,%20tengo%20la%20siguiente%20duda:" target="_blank"
+          class="rsvp-button">
+          <i class="fab fa-whatsapp"></i> DAVID
+        </a>
+        <a href="https://wa.me/34658697068?text=Hola,%20tengo%20la%20siguiente%20duda:" target="_blank"
+          class="rsvp-button">
+          <i class="fab fa-whatsapp"></i> MÓNICA
+        </a>
+      </div>
     </section>
 
     <section class="seccion reveal">
       <h2>🎁 Regalo</h2>
-      <p>Estar juntos ese dia para nosotros es lo más importante, pero para el que pueda y quiera, os dejamos nuestro número de cuenta:</p>
+      <p>Estar juntos ese dia para nosotros es lo más importante, pero para el que pueda y quiera, os dejamos nuestro
+        número de cuenta:</p>
       <div class="cuenta">ES12 3456 7890 1234 5678 9012</div>
     </section>
 
-    
-<section class="seccion reveal">
-  <h2>⏳ Faltan</h2>
-  <div class="countdown-circle">
-    <div class="circle"><span id="days">00</span><small>Días</small></div>
-    <div class="circle"><span id="hours">00</span><small>Horas</small></div>
-    <div class="circle"><span id="minutes">00</span><small>Min</small></div>
-    <div class="circle"><span id="seconds">00</span><small>Seg</small></div>
-  </div>
-  <h3><em>👰‍♀️ ¡OS ESPERAMOS! 🤵‍♂️</em></h3>
- 
-</section>
 
-    
+    <section class="seccion reveal">
+      <h2>⏳ Faltan</h2>
+      <div class="countdown-circle">
+        <div class="circle"><span id="days">00</span><small>Días</small></div>
+        <div class="circle"><span id="hours">00</span><small>Horas</small></div>
+        <div class="circle"><span id="minutes">00</span><small>Min</small></div>
+        <div class="circle"><span id="seconds">00</span><small>Seg</small></div>
+      </div>
+      <h3><em>👰‍♀️ ¡OS ESPERAMOS! 🤵‍♂️</em></h3>
 
-   
+    </section>
+
   </main>
- 
+
   <script src="script.js"></script>
 </body>
+
 </html>
