--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+l<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -29,7 +29,7 @@
 <body>
 
   <div id="pantalla-inicial" class="pantalla">
-    <div class="cta-text">Haz clic para abrir tu invitación ✉️</div>
+    <div class="cta-text">Haz clic en el sobre para abrir tu invitación ✉️</div>
     <img id="sobre" class="sobre" src="images/sobre.jpeg" alt="Sobre de invitación" tabindex="0" role="button" aria-label="Abrir invitación"/>
   </div>
 
