--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ l<!DOCTYPE html>
 
     <section class="seccion reveal">
       <h2>☎️ Contacto</h2>
-      <p>🌿 Este día lo estamos preparando con mucho cariño.</p>
+      <p>Este día lo estamos preparando con mucho cariño.</p>
       <p>¿Quieres compartirnos algo? Pulsa el botón y cuéntanos. </p>
       <div class="rsvp-buttons">
         <a href="https://wa.me/34687254780?text=Hola,%20tengo%20la%20siguiente%20duda:" target="_blank"
