--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-l<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -27,6 +27,9 @@ l<!DOCTYPE html>
 </head>
 
 <body>
+<div id="scrollBarContainer">
+  <div id="scrollBar"></div>
+</div>
 
   <div id="pantalla-inicial" class="pantalla">
     <div class="cta-text">Haz clic en el sobre para abrir tu invitación ✉️</div>
@@ -123,5 +126,7 @@ l<!DOCTYPE html>
   </main>
 
   <script src="script.js"></script>
+  
+
 </body>
 </html>
