--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
     </section>
     <section class="seccion reveal">
-      <h2>📋 Formulario de confirmación</h2>
+      <h2>📋 Formulario </h2>
       <p>Por favor, completa el siguiente formulario para ayudarnos a organizar este día tan especial:</p>
       <a class="boton" href="https://docs.google.com/forms/u/0/d/1TEZxsz0ZrALX4ZRESQOHn513-eJsIIFBOOM8Uo638jg/edit"
         target="_blank">
@@ -87,7 +87,7 @@
     <section class="seccion reveal">
       <h2>☎️ Contacto</h2>
       <p>Este día lo estamos preparando con mucho cariño.</p>
-      <p>¿Quieres consultarnos algo? Pulsa el botón y cuéntanos. </p>
+      <p>¿Quieres contarnos algo? Pulsa el botón y cuéntanos. </p>
       <div class="rsvp-buttons">
         <a href="https://wa.me/34687254780?text=Hola,%20tengo%20la%20siguiente%20duda:" target="_blank"
           class="rsvp-button">
@@ -101,7 +101,7 @@
     </section>
 
     <section class="seccion reveal">
-      <h2>🎁 Regalo</h2>
+      <h2>🎁 Lista de Boda</h2>
       <p>Estar juntos ese día para nosotros es lo más importante, pero para el que pueda y quiera, os dejamos nuestro
         número de cuenta:</p>
       <div class="cuenta-container">
