--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@
 </head>
 
 <body>
-<div id="scrollBarContainer">
-  <div id="scrollBar"></div>
-</div>
+
 
   <div id="pantalla-inicial" class="pantalla">
     <div class="cta-text">Haz clic en el sobre para abrir tu invitación ✉️</div>
-    <img id="sobre" class="sobre" src="images/sobre.jpeg" alt="Sobre de invitación" tabindex="0" role="button" aria-label="Abrir invitación"/>
+    <img id="sobre" class="sobre" src="images/sobre.jpeg" alt="Sobre de invitación" tabindex="0" role="button"
+      aria-label="Abrir invitación" />
   </div>
 
   <main id="contenido-principal">
@@ -60,8 +59,7 @@
           class="boton">
           <i class="fas fa-map-marker-alt"></i> Ver ubicación
         </a>
-        <a href="https://www.abbahoteles.com/es/destinos/abba-burgos-hotel/hotel.html" target="_blank"
-          class="boton">
+        <a href="https://www.abbahoteles.com/es/destinos/abba-burgos-hotel/hotel.html" target="_blank" class="boton">
           <i class="fas fa-hotel"></i> Página del hotel
         </a>
       </div>
@@ -123,10 +121,56 @@
       </div>
       <h3><em>👰‍♀️ ¡OS ESPERAMOS! 🤵‍♂️</em></h3>
     </section>
+    <section id="aparcamiento" class="seccion reveal">
+      <h2>🚗 Aparcamiento</h2>
+      <p>Si vienes en coche, estas son algunas opciones cercanas:</p>
+      <ul>
+
+       <a href="https://www.google.com/maps?q=Museo+de+la+Evoluci%C3%B3n+Humana+(MEH),+72,+09002+Burgos" target="_blank">
+        
+          <span class="map-icon">
+            <li>🏛️ <strong>Parking Evolución Humana</strong> – 12,60€/día 📍</li>
+          </span>
+        </a>
+        <a href="https://www.google.com/maps?q=Pl.+Vega,+09002+Burgos" target="_blank">
+          <span class="map-icon">
+            <li>🅿️ <strong>Plaza Vega</strong> – 9,95€/día · 5 min a pie 📍</li>
+          </span>
+        </a>
+        <a href="https://www.google.com/maps?q=Blvr.+Ferroviario,+2,+09001+Burgos"
+          target="_blank"><span class="map-icon">
+            <li>🚂 <strong>Antigua Estación</strong> – Gratuito · 10-15 min a pie📍</li>
+          </span>
+        </a>
+
+
+
+        <a href="https://www.google.com/maps?q=Plaza+de+Sta.+Teresa,+09002+Burgos" target="_blank">
+          <span class="map-icon">
+            <li>🕍<strong>Santa Teresa</strong> – Zona azul · Gratis domingos 📍 </li>
+          </span>
+        </a>
+
+        <a href="https://www.google.com/maps?q=C.+del+Molino,+09007+Burgos" target="_blank">
+        <span class="map-icon">
+          <li>🆓 <strong>Zonas blanca</strong>: C/ Molinillo (15 min a pie)📍</li>
+        </span>
+        </a>
+
+        <a href="https://www.google.com/maps?q=Av.+Cantabria,+Burgos/@42.3411,-3.6888" target="_blank"><span
+            class="map-icon">
+            <li>🆓 <strong>Zonas blanca</strong>: Av. Cantabria (20-30 min a pie) 📍</li>
+          </span>
+        </a>
+        
+      </ul>
+    </section>
+
   </main>
 
   <script src="script.js"></script>
-  
+
 
 </body>
+
 </html>
