--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </a>
         <a href="https://www.google.com/maps?q=Pl.+Vega,+09002+Burgos" target="_blank">
           <span class="map-icon">
-            <li>🅿️ <strong>Plaza Vega</strong> – 9,95€/día · 5 min a pie 📍</li>
+            <li>🅿️ <strong>Parking Plaza Vega</strong> – 9,95€/día · 5 min a pie 📍</li>
           </span>
         </a>
         <a href="https://www.google.com/maps?q=Blvr.+Ferroviario,+2,+09001+Burgos"
