--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section class="seccion reveal">
       <h2><i class="fas fa-champagne-glasses"> </i> Banquete</h2>
       <p>El lugar del banquete será el <strong>Hotel Abba</strong> en Burgos.</p>
-      <p>Tiene plazas de parking y un 10% de descuento para huéspedes.</p>
+      <p>Tiene plazas limitadas de parking y un 10% de descuento para huéspedes.</p>
       <div>
         <a href="https://www.google.com/maps?q=Calle+Fern%C3%A1n+Gonz%C3%A1lez,+72,+09003+Burgos" target="_blank"
           class="boton">
