--- a/index.html
+++ b/index.html
@@ -123,43 +123,40 @@
     </section>
     <section id="aparcamiento" class="seccion reveal">
       <h2>🚗 Aparcamiento</h2>
-      <p>Si vienes en coche, estas son algunas opciones cercanas:</p>
+     <p>Si vienes en coche, estas son algunas opciones cercanas  (pincha 📌 para ver ubicación):</p>
       <ul>
 
        <a href="https://www.google.com/maps?q=Museo+de+la+Evoluci%C3%B3n+Humana+(MEH),+72,+09002+Burgos" target="_blank">
         
           <span class="map-icon">
-            <li>🏛️ <strong>Parking Evolución Humana</strong> – 12,60€/día 📍</li>
+            <li>🏛️ <strong>Parking Evolución Humana</strong> – 12,60€/día 📌</li>
           </span>
         </a>
         <a href="https://www.google.com/maps?q=Pl.+Vega,+09002+Burgos" target="_blank">
           <span class="map-icon">
-            <li>🅿️ <strong>Parking Plaza Vega</strong> – 9,95€/día · 5 min a pie 📍</li>
+            <li>🅿️ <strong>Parking Plaza Vega</strong> – 9,95€/día · 5 min a pie 📌</li>
           </span>
         </a>
         <a href="https://www.google.com/maps?q=Blvr.+Ferroviario,+2,+09001+Burgos"
           target="_blank"><span class="map-icon">
-            <li>🚂 <strong>Antigua Estación</strong> – Gratuito · 10-15 min a pie📍</li>
+            <li>🚂 <strong>Antigua Estación</strong> – Gratuito · 10-15 min a pie📌</li>
           </span>
         </a>
-
-
-
         <a href="https://www.google.com/maps?q=Plaza+de+Sta.+Teresa,+09002+Burgos" target="_blank">
           <span class="map-icon">
-            <li>🕍<strong>Santa Teresa</strong> – Zona azul · Gratis domingos 📍 </li>
+            <li>🕍<strong>Santa Teresa</strong> – Zona azul · Gratis domingos 📌 </li>
           </span>
         </a>
 
         <a href="https://www.google.com/maps?q=C.+del+Molino,+09007+Burgos" target="_blank">
         <span class="map-icon">
-          <li>🆓 <strong>Zonas blanca</strong>: C/ Molinillo (15 min a pie)📍</li>
+          <li>🆓 <strong>Zonas blanca</strong>: C/ Molinillo (15 min a pie)📌</li>
         </span>
         </a>
 
         <a href="https://www.google.com/maps?q=Av.+Cantabria,+Burgos/@42.3411,-3.6888" target="_blank"><span
             class="map-icon">
-            <li>🆓 <strong>Zonas blanca</strong>: Av. Cantabria (20-30 min a pie) 📍</li>
+            <li>🆓 <strong>Zonas blanca</strong>: Av. Cantabria (20-30 min a pie) 📌</li>
           </span>
         </a>
         
