--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <i class="fas fa-copy"></i> Copiar
         </button>
       </div>
-      <span id="copiadoMensaje" class.copiado-mensaje">¡IBAN Copiado!</span>
+      <span id="copiadoMensaje" class="copiado-mensaje" aria-live="polite">¡IBAN Copiado!</span>
     </section>
 
     <section class="seccion reveal">
