--- a/index.html
+++ b/index.html
@@ -137,22 +137,22 @@
       <ul aria-label="Opciones de aparcamiento">
         <li>
           <a href="https://www.google.com/maps?q=Museo+de+la+Evoluci%C3%B3n+Humana+(MEH),+72,+09002+Burgos" target="_blank" rel="noopener noreferrer">
-            <span class="map-icon" role="img" aria-label="icono museo">🏛️</span> <strong>Parking Evolución Humana</strong> – 12,60€/día <span class="map-pin-icon">📌</span>
+            <span class="map-icon" role="img" aria-label="icono museo">🏛️</span> <strong>Parking Evolución Humana</strong> : 12,60€/día <span class="map-pin-icon">📌</span>
           </a>
         </li>
         <li>
           <a href="https://www.google.com/maps?q=Pl.+Vega,+09002+Burgos" target="_blank" rel="noopener noreferrer">
-            <span class="map-icon" role="img" aria-label="icono parking">🅿️</span> <strong>Parking Plaza Vega</strong> – 9,95€/día · 5 min a pie <span class="map-pin-icon">📌</span>
+            <span class="map-icon" role="img" aria-label="icono parking">🅿️</span> <strong>Parking Plaza Vega</strong>: 9,95€/día · 5 min a pie <span class="map-pin-icon">📌</span>
           </a>
         </li>
         <li>
           <a href="https://www.google.com/maps?q=Blvr.+Ferroviario,+2,+09001+Burgos" target="_blank" rel="noopener noreferrer">
-            <span class="map-icon" role="img" aria-label="icono tren">🚂</span> <strong>Antigua Estación</strong> – Gratuito · 10-15 min a pie <span class="map-pin-icon">📌</span>
+            <span class="map-icon" role="img" aria-label="icono tren">🚂</span> <strong>Antigua Estación</strong> : Gratuito · 10-15 min a pie <span class="map-pin-icon">📌</span>
           </a>
         </li>
         <li>
           <a href="https://www.google.com/maps?q=Plaza+de+Sta.+Teresa,+09002+Burgos" target="_blank" rel="noopener noreferrer">
-            <span class="map-icon" role="img" aria-label="icono iglesia">🕍</span><strong>Santa Teresa</strong> – Zona azul · Gratis domingos <span class="map-pin-icon">📌</span>
+            <span class="map-icon" role="img" aria-label="icono iglesia">🕍</span><strong>Santa Teresa</strong> : Zona azul · Gratis domingos <span class="map-pin-icon">📌</span>
           </a>
         </li>
         <li>
