--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
   <!-- Tu hoja de estilos -->
   <link rel="stylesheet" href="style.css" />
-
+  <!-- Flecha -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
@@ -49,6 +50,9 @@
       <h2 class="titulo "> ¡Nos casamos!</h2>
       <p class="fecha">12:00 hrs - 27 / 06 / 26 </p>
       <p>Iglesia San Nicolás de Bari, Burgos</p>
+        <!-- Flecha animada -->
+      <i class="fa-solid fa-arrow-down scroll-icon"></i>
+
     </section>
 
     <section class="seccion reveal">
