--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       <p>El lugar de la ceremonia será la <strong>Iglesia San Nicolás de Bari</strong> en Burgos a las 12:00 h.</p>
       <iframe src="https://www.google.com/maps?q=Iglesia+San+Nicol%C3%A1s+de+Bari,+Burgos&output=embed"
         title="Mapa de ubicación de la Iglesia San Nicolás de Bari" allowfullscreen loading="lazy"></iframe>
+       <i class="fa-solid fa-arrow-down scroll-icon"></i>
     </section>
 
     <section class="seccion reveal">
@@ -75,6 +76,7 @@
           <i class="fas fa-hotel"></i> Página del hotel
         </a>
       </div>
+       <i class="fa-solid fa-arrow-down scroll-icon"></i>
     </section>
     <section class="seccion reveal">
       <h2>📋 Formulario </h2>
@@ -83,6 +85,7 @@
         target="_blank">
         <i class="fas fa-check-circle"></i> Confirmar asistencia
       </a>
+       <i class="fa-solid fa-arrow-down scroll-icon"></i>
     </section>
 
     <section class="seccion reveal">
@@ -92,6 +95,7 @@
         Santa Teresa (al lado del Museo de la Evolución).</p>
       <p>Si te has quedado con hambre, date una vuelta por la calle de los Herreros y pídete un “cojonudo” o una
         “cojonuda”.</p>
+       <i class="fa-solid fa-arrow-down scroll-icon"></i>
     </section>
 
     <section class="seccion reveal">
@@ -108,6 +112,7 @@
           <i class="fab fa-whatsapp"></i> MÓNICA
         </a>
       </div>
+       <i class="fa-solid fa-arrow-down scroll-icon"></i>
     </section>
 
     <section class="seccion reveal">
@@ -121,6 +126,7 @@
         </button>
       </div>
       <span id="copiadoMensaje" class="copiado-mensaje" aria-live="polite">¡IBAN Copiado!</span>
+       <i class="fa-solid fa-arrow-down scroll-icon"></i>
     </section>
 
     <section class="seccion reveal">
@@ -132,6 +138,7 @@
         <div class="circle"><span id="seconds">00</span><small>Seg</small></div>
       </div>
       <h3><em>👰‍♀️ ¡OS ESPERAMOS! 🤵‍♂️</em></h3>
+       <i class="fa-solid fa-arrow-down scroll-icon"></i>
     </section>
 
     <section id="aparcamiento" class="seccion reveal">
